--- a/producer.html
+++ b/producer.html
@@ -119,9 +119,10 @@
           </div>
 			    <h2>The Perils of Growing Up Flat-Chested</h2>
 			    <p>A coming of age comedy which tells the story of Katya, a sixteen year old girl determined to increase her bust size before a study date with her science lab partner. This is a short film that - much like puberty - is at once warm, funny, and filled with the thrill of anticipation.</p>
-  			  <p>Written and Directed by Yulin Kuang</p>
-  			  <p><a href="http://perilsofproduction.wordpress.com/">http://perilsofproduction.wordpress.com/</a></p>
-  			  <iframe src="http://player.vimeo.com/video/45941165" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  			  <iframe src="http://player.vimeo.com/video/53749001" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  			   <p>Written and Directed by Yulin Kuang</p>
+			  <p>Production Blog: <a href="http://perilsofproduction.wordpress.com">http://perilsofproduction.wordpress.com</a></p>
+			  <p>Behind the Scenes: <a href="https://vimeo.com/45941165">https://vimeo.com/45941165</a></p>
 			  </div>
 			  <div class="description" data-fill="#F00">
 			    <div>
@@ -134,9 +135,9 @@
           </div>
 			    <h2>First Kiss</h2>
 			    <p>The story of Adam Schoenberger, a fourteen-year-old romantic who finds out a pretty girl wants to kiss him at his best friend's Spin the Bottle party. This short film explores the thrill of anticipation and the pangs of growing up, all in an unabashed ode to the agonies of adolescence.</p> 
-  			  <p>Written and Directed by Yulin Kuang</p>
-  			  <p><a href="http://firstkissmovie.wordpress.com/"/>http://firstkissmovie.wordpress.com/</a></p>
   			  <iframe src="http://player.vimeo.com/video/40345179" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  			  <p>Written and Directed by Yulin Kuang</p>
+    			  <p>Production Blog: <a href="http://firstkissmovie.wordpress.com/"/>http://firstkissmovie.wordpress.com/</a></p>
 			  </div>
 			  <div class="description" data-fill="#000">
 			    <div>
@@ -170,8 +171,9 @@
           </div>
 			    <h2>Take Twelve: A Christmas Movie</h2>
 			    <p>A group of passionate, yet misguided college kids teams up to shoot a Christmas commercial. Accordingly, this is a collaboration between a similar group of Carnegie Mellon students.</p>
-  			  <p>Written by Benjamin Welmond, Yulin Kuang, and Stefan Dezil. Directed by Benjamin Welmond and Yulin Kuang</p>
+  			  
   			  <iframe src="http://player.vimeo.com/video/33923170" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  			  <p>Written by Benjamin Welmond, Yulin Kuang, and Stefan Dezil. Directed by Benjamin Welmond and Yulin Kuang</p>
 			  </div>
 			  <div id="footer">			    
   	      <div id="contact">
