--- a/steeltown/crew.html
+++ b/steeltown/crew.html
@@ -11,7 +11,7 @@
             <h1>Steeltown</h1>
             <span style="font-size: 20px">A short film about the homestead strike</span>
         </div>
-        <div id="content" style="width: 700px;">
+        <div id="content">
             <h2>Crew</h2>
             <div class="inner crew">
                 <p>
