--- a/steeltown/synopsis.html
+++ b/steeltown/synopsis.html
@@ -11,7 +11,7 @@
             <h1>Steeltown</h1>
             <span style="font-size: 20px">A short film about the homestead strike</span>
         </div>
-        <div id="content" style="width: 674px">
+        <div id="content">
             <h2>Synopsis</h2>
             <div>
                 <p style="text-align: justify;">Set in Homestead, PA in 1892, Hugh O&#39;Donnell struggles to maintain order among fellow steelworkers as wages are cut and working conditions decline under the ruthless management of Henry Clay Frick. Mounting tensions forebode a brutal workers&#39; strike, but O&#39;Donnell is determined to find a peaceful solution to this historic clash between capital and labor.</p>
