--- a/steeltown/artwork.html
+++ b/steeltown/artwork.html
@@ -14,7 +14,7 @@
             <h1>Steeltown</h1>
             <span style="font-size: 20px">A short film about the homestead strike</span>
         </div>
-        <div id="content" style="width: 700px">
+        <div id="content">
             <h2>Artwork</h2>
             <div class="inner artwork">
                 <p>
