--- a/steeltown/donate.html
+++ b/steeltown/donate.html
@@ -15,7 +15,7 @@
             <h2>Donate</h2>
             <div class="donate">
                 <p><img src="img/kickstarter-logo-dark.png"></p>
-                <p>
+                <p style="font-size: 24px">
                     Coming August 2013!
                 </p>
             </div>
@@ -31,8 +31,8 @@
             <a class="current" href="donate.html">Donate</a>
         </div>
         <div id="links">
-            <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.png" height="20" width="20"></a>
-            <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.png" height="20" width="20"></a>
+            <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.png" height="20" width="11"></a>
+            <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.png" height="20" width="28"></a>
             <a href=""><img src="img/kickstarter.png" height="20" width="19"></a>
         </div>
     </body>
