--- a/steeltown/contact.html
+++ b/steeltown/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Steeltown</title>
+        <title>Steel Town - Contact</title>
+        <link rel="shortcut icon" href="favicon.ico">
         <link href="css/style.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
