--- a/steeltown/index.html
+++ b/steeltown/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Steeltown</title>
+        <title>Steel Town</title>
+        <link rel="shortcut icon" href="favicon.ico">
         <link href="css/style.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
     </head>
     <body style="background: black url('img/home_light.png') no-repeat center top;">
         <div id="title">
-            <h1>Steeltown</h1>
+            <h1>Steel Town</h1>
             <span>A short film about the homestead strike</span>
         </div>
         <div id="nav">
