--- a/steeltown/contact.html
+++ b/steeltown/contact.html
@@ -17,8 +17,8 @@
             <div class="contact">
                 <p><b>Email: steeltownmovie@gmail.com</b></p>
                 <p>
-                    <span><a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook2.png">/SteelTownMovie</a></span>
-                    <span><a href="https://twitter.com/SteelTownMovie"><img src="img/twitter2.png">@SteelTownMovie</a></span>
+                    <span><a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook2.jpg">/SteelTownMovie</a></span>
+                    <span><a href="https://twitter.com/SteelTownMovie"><img src="img/twitter2.jpg">@SteelTownMovie</a></span>
                 </p>
             </div>
         </div>
@@ -33,9 +33,9 @@
             <a href="donate.html">Donate</a>
         </div>
         <div id="links">
-            <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.png" height="20" width="11"></a>
-            <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.png" height="20" width="28"></a>
-            <a href=""><img src="img/kickstarter.png" height="20" width="19"></a>
+            <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.jpg" height="20" width="11"></a>
+            <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.jpg" height="20" width="28"></a>
+            <a href=""><img src="img/kickstarter.jpg" height="20" width="19"></a>
         </div>
     </body>
 </html>
