--- a/steeltown/index.html
+++ b/steeltown/index.html
@@ -7,7 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
     </head>
-    <body style="background: black url('img/home_light.png') no-repeat center top;">
+    <body style="background: black url('img/home_light.jpg') no-repeat center top;">
         <div id="title">
             <h1>Steel Town</h1>
             <span>A short film about the homestead strike</span>
@@ -23,9 +23,9 @@
             <a href="donate.html">Donate</a>
         </div>
         <div id="links">
-            <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.png" height="20" width="11"></a>
-            <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.png" height="20" width="28"></a>
-            <a href=""><img src="img/kickstarter.png" height="20" width="19"></a>
+            <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.jpg" height="20" width="11"></a>
+            <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.jpg" height="20" width="28"></a>
+            <a href=""><img src="img/kickstarter.jpg" height="20" width="19"></a>
         </div>
     </body>
 </html>
