--- a/steeltown/index.html
+++ b/steeltown/index.html
@@ -6,11 +6,13 @@
         <link href="css/style.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
+        <script src="js/jquery-1.10.2.min.js"></script>
+        <script src="js/application.js"></script>
     </head>
     <body style="background: black url('img/home_light.jpg') no-repeat center top;">
         <div id="title">
             <h1>Steel Town</h1>
-            <span>A short film about the homestead strike</span>
+            <span>A SHORT FILM ABOUT THE HOMESTEAD STRIKE</span>
         </div>
         <div id="nav">
             <a class="current" href="index.html">Home</a>|
@@ -21,11 +23,11 @@
             <a href="crew.html">Crew</a>|
             <a href="contact.html">Contact</a>|
             <a href="donate.html">Donate</a>
-        </div>
-        <div id="links">
-            <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.jpg" height="20" width="11"></a>
-            <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.jpg" height="20" width="28"></a>
-            <a href=""><img src="img/kickstarter.jpg" height="20" width="19"></a>
+            <div id="links">
+                <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.jpg" height="20" width="11"></a>
+                <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.jpg" height="20" width="28"></a>
+                <a href=""><img src="img/kickstarter.jpg" height="20" width="19"></a>
+            </div>
         </div>
     </body>
 </html>
