--- a/steeltown/contact.html
+++ b/steeltown/contact.html
@@ -17,8 +17,8 @@
             <div class="contact">
                 <p><b>Email: steeltownmovie@gmail.com</b></p>
                 <p>
-                    <span><a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook2.jpg">/SteelTownMovie</a></span>
-                    <span><a href="https://twitter.com/SteelTownMovie"><img src="img/twitter2.jpg">@SteelTownMovie</a></span>
+                    <span><a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook2.png">/SteelTownMovie</a></span>
+                    <span><a href="https://twitter.com/SteelTownMovie"><img src="img/twitter2.png">@SteelTownMovie</a></span>
                 </p>
             </div>
         </div>
@@ -31,11 +31,11 @@
             <a href="crew.html">Crew</a>|
             <a class="current" href="contact.html">Contact</a>|
             <a href="donate.html">Donate</a>
-        </div>
-        <div id="links">
-            <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.jpg" height="20" width="11"></a>
-            <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.jpg" height="20" width="28"></a>
-            <a href=""><img src="img/kickstarter.jpg" height="20" width="19"></a>
+            <div id="links">
+                <a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook.jpg" height="20" width="11"></a>
+                <a href="https://twitter.com/SteelTownMovie"><img src="img/twitter.jpg" height="20" width="28"></a>
+                <a href=""><img src="img/kickstarter.jpg" height="20" width="19"></a>
+            </div>
         </div>
     </body>
 </html>
