updated homepage, slideshow, director page, producer page

--- a/index.html
+++ b/index.html
@@ -135,20 +135,78 @@
 			
 			<div id="content" style="width: 800px">
 			  <div id="galleria">
+		    <img src="images/home/1.jpg" />
+		    <img src="images/home/2.jpg" />
+		    <img src="images/home/3.jpg" />
+		    <img src="images/home/4.jpg" />
+		    <img src="images/home/5.jpg" />
+		    <img src="images/home/6.jpg" />
+		    <img src="images/home/7.jpg" />
+		    <img src="images/home/8.jpg" />
+		    <img src="images/home/9.jpg" />
             <img src="images/home/Home 1.jpg" />
             <img src="images/home/Home 2.jpg" />
             <img src="images/home/Home 3.jpg" />
             <img src="images/home/Home 4.jpg" />
             <img src="images/home/Home 5.jpg" />
             <img src="images/home/Home 6.jpg" />
-            <img src="images/home/Home 7.jpg" />
             <img src="images/home/Home 8.jpg" />
             <img src="images/home/Home 9.jpg" />
             <img src="images/home/Home 10.jpg" />
             <img src="images/home/Home 11.jpg" />
             <img src="images/home/Home 12.jpg" />
             <img src="images/home/Home 13.jpg" />
+            
         </div>
+        <div class="description" data-fill="#000" style="width: 600px; margin: 10px auto;">
+		    <div>
+		        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                	 width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+                <g>
+                	<polygon points="79.177,40.787 89.557,38.492 69.779,37.071 58.853,39.694 51.531,47.233 65.627,47.889 	"/>
+                	<path d="M52.026,70.176l7.976,7.866l9.397,5.79c0,0,18.902-25.348,19.229-25.458c0.328-0.108-10.598-5.464-10.598-5.464
+                		l-13.55-0.653L52.026,70.176z"/>
+                	<path d="M32.029,87.874l3.389,12.239l21.634-4.479L53.01,85.143l-3.934-12.455c0,0-14.642,1.094-14.642,0.766
+                		S32.029,87.875,32.029,87.874z"/>
+                	<polygon points="37.383,49.853 16.951,80.775 22.852,75.53 32.686,70.176 45.797,50.398 41.318,47.011 	"/>
+                	<path d="M59.371,48.753c0.875,3.179-1.215,9.033-6.541,14.363c-4.098,4.101-9.129,6.751-12.816,6.751l0,0
+                		c-1.342,0-2.373-0.35-3.066-1.042c-0.42-0.421-0.711-0.988-0.877-1.667l-1.428,2.152l0.918,0.902
+                		c3.578,3.575,11.932,1.016,18.657-5.714c0.468-0.467,0.916-0.946,1.343-1.429l3.979-5.723c1.614-3.121,2.293-6.136,1.871-8.5
+                		L59.371,48.753z"/>
+                	<path d="M8.789,43.986L27.66,62.473l8.76-13.258c0.076-0.116,0.175-0.217,0.287-0.299l3.935-2.841
+                		c0.201-0.146,0.438-0.218,0.676-0.218c0.244,0,0.488,0.077,0.693,0.233l4.481,3.388c0.049,0.037,0.091,0.079,0.132,0.122
+                		c0.824-0.572,1.654-1.081,2.479-1.522l1.601-1.647l4.785-4.928l-8.928-8.744l0.058-20.372c0-3.131-1.281-3.847-2.296-4.114
+                		l-8.974-1.555V0.344c0-0.141-0.606-0.254-1.356-0.254c-0.748,0-1.355,0.113-1.355,0.254v5.903l-4.831-0.836
+                		c-0.506-0.12-1.371-0.12-1.371-0.12l-3.67,0.417c-1.013,0.089-1.978,1.213-1.978,2.827v11.93c-2.131,1.213-4.289,2.85-6.299,4.862
+                		C7.764,32.057,5.211,40.411,8.789,43.986z M20.787,27.435v2.396l-2.115-2.045c-0.342-0.331-0.352-0.876-0.02-1.218
+                		c0.332-0.342,0.877-0.351,1.219-0.02L20.787,27.435L20.787,27.435z M20.787,32.605v2.396l-5.002-4.837
+                		c-0.344-0.331-0.352-0.877-0.023-1.218c0.332-0.341,0.877-0.35,1.219-0.02L20.787,32.605L20.787,32.605z M20.787,38.031v2.396
+                		l-7.504-7.254c-0.342-0.33-0.35-0.875-0.02-1.218c0.332-0.341,0.875-0.35,1.217-0.02L20.787,38.031L20.787,38.031z M20.787,45.901
+                		l-9.35-9.042c-0.343-0.331-0.352-0.876-0.023-1.217c0.332-0.343,0.877-0.352,1.22-0.021l8.153,7.884V45.901z M41.908,12.238
+                		l-0.029,15.934l-8.733-8.557c-1.687-1.688-4.438-2.007-7.58-1.171l0.004-9.576c-0.03-1.372,0.238-1.729,0.238-1.729l6.83,1.102
+                		v1.168c0,0.14,0.606,0.254,1.354,0.254c0.75,0,1.357-0.114,1.357-0.254V8.68l4.68,0.755C41.223,9.643,41.818,10.687,41.908,12.238z
+                		 M46.1,38.017l-15.98-15.451c-0.342-0.33-0.35-0.875-0.02-1.218c0.33-0.342,0.877-0.351,1.217-0.02l15.982,15.451
+                		c0.342,0.33,0.351,0.876,0.02,1.217c-0.168,0.176-0.395,0.264-0.62,0.264C46.482,38.26,46.269,38.179,46.1,38.017z M25.615,23.489
+                		c-0.02-0.021-0.035-0.043-0.053-0.064v-1.112c0.012-0.014,0.021-0.029,0.033-0.043c0.332-0.342,0.875-0.351,1.219-0.02L42.793,37.7
+                		c0.344,0.331,0.352,0.876,0.021,1.219c-0.17,0.174-0.395,0.262-0.619,0.262c-0.216,0-0.432-0.08-0.599-0.242L25.615,23.489z
+                		 M25.56,28.704v-2.396l13.517,13.067c0.342,0.331,0.352,0.876,0.02,1.218c-0.168,0.174-0.395,0.262-0.619,0.262
+                		c-0.215,0-0.432-0.08-0.598-0.242L25.56,28.704z M34.651,43.237l-9.096-8.793l0.002-2.396l10.291,9.951
+                		c0.342,0.33,0.353,0.876,0.021,1.217c-0.168,0.177-0.393,0.263-0.619,0.263C35.035,43.479,34.82,43.398,34.651,43.237z
+                		 M31.764,45.614l-6.207-6.002v-2.396l7.404,7.16c0.342,0.332,0.352,0.877,0.02,1.219c-0.168,0.175-0.393,0.263-0.617,0.263
+                		C32.146,45.858,31.93,45.777,31.764,45.614z M29.265,48.625l-3.711-3.589l0.002-2.395l4.905,4.746
+                		c0.342,0.33,0.352,0.875,0.021,1.217c-0.17,0.175-0.395,0.262-0.619,0.262C29.646,48.866,29.43,48.786,29.265,48.625z
+                		 M27.416,52.311l-5.623-5.437l2.438-0.039l4.381,4.235c0.344,0.332,0.352,0.878,0.021,1.219c-0.17,0.177-0.395,0.266-0.619,0.266
+                		C27.799,52.555,27.582,52.475,27.416,52.311z M9.937,39.879c0.332-0.342,0.877-0.351,1.218-0.021l15.979,15.451
+                		c0.342,0.332,0.352,0.877,0.02,1.219c-0.168,0.177-0.392,0.264-0.618,0.264c-0.216,0-0.431-0.079-0.599-0.243L9.957,41.097
+                		C9.615,40.767,9.605,40.222,9.937,39.879z"/>
+                </g>
+                </svg>
+      </div>
+		    <h2>Project Spotlight</h2>
+		    <img src="images/home/title_card.jpg" style="width: 400px; margin-left: 20px;">
+		    <p>An 1890s period piece short which follows Pittsburgh steelworkers in their battle against the millionaires who hired them.</p>
+		    <p>Film website: <a href="http://www.steeltownfilm.com">www.steeltownfilm.com</a></p>
+		  </div>
 			  <div id="footer">			    
   	      <div id="contact">
   	        <a href="mailto:nhurt@cmu.edu" target="_blank">
