--- a/steeltown/index.html
+++ b/steeltown/index.html
@@ -14,9 +14,100 @@
             <h1>Steel Town</h1>
             <span>A SHORT FILM ABOUT THE HOMESTEAD STRIKE</span>
         </div>
+        <div id="content">
+            
+        </div>
+        <div id="artwork" class="noshow">
+            <h2>Artwork</h2>
+            <div class="inner artwork">
+                <p>
+                    <a href="img/Sketch_1_Final.jpg" data-lightbox="sketches" title="An orange flare envelops Carey, sending him yards away from the furnace&#34; -pg. 1 of Steel Town"><img src="img/Sketch_1_Final.jpg" width="683" height="293"></a>
+                    <span class="caption">&#34;An orange flare envelops Carey, sending him yards away from the furnace&#34;</span><span class="ref">-pg. 1 of <i>Steel Town</i></span>
+                </p>
+                <p>
+                    <a href="img/Sketch_3_Final.jpg" data-lightbox="sketches" title="&#34;I&#39;ve never seen you here before. What&#39;s your name?&#34; -Martin O&#39;Donnell, pg. 9 of Steel Town">
+                    <img src="img/Sketch_3_Final.jpg" width="683" height="293">
+                    </a>
+                    <span class="caption">&#34;I&#39;ve never seen you here before. What&#39;s your name?&#34;</span><span class="ref">-Martin O&#39;Donnell, pg. 9 of <i>Steel Town</i></span>
+                </p>
+                <p>
+                     <a href="img/Sketch_2_Final.jpg" data-lightbox="sketches" title="&#34;Rifles poke out of the barge windows in rapid succession.&#34; -pg. 18 of Steel Town">
+                    <img src="img/Sketch_2_Final.jpg" width="683" height="293">
+                    </a>
+                    <span class="caption">&#34;Rifles poke out of the barge windows in rapid succession.&#34;</span><span class="ref">-pg. 18 of <i>Steel Town</i></span>
+                </p>
+                <p>
+                    Storyboards coming soon!
+                </p>
+            </div>
+        </div>
+        <div id="crew" class="noshow">
+            <h2>Crew</h2>
+            <div class="inner crew">
+                <p>
+                    
+                    <img src='img/nick.png'>
+                <span class="name"><b>Nick Hurt</b> <a href="http://nicolashurt.com">(nicolashurt.com)</a></span>
+                <span class="title">Writer | Director | Producer</span>
+                Nick has produced multiple independent short films, including The Perils of Growing Up Flat-Chested, an official selection of the Palm Springs International ShortFest and winner of the 2012 Steeltown Film Factory competition, as well as First Kiss, an official selection of the 2012 HollyShorts Film Festival. Nick has a BS in Business Administration from Carnegie Mellon University and leaps at the chance to produce any film that tells a meaningful story.
+                </p>
+
+                <p>
+                <img src='img/yulin.png'>
+                <span class="name"><b>Yulin Kuang</b> <a href="http://www.yulinkuang.com">(www.yulinkuang.com)</a></span>
+                <span class="title">Writer | Producer</span>
+                Yulin, a recent alum of Carnegie Mellon University's writing and film program, has written, directed, and produced a number of award-winning short films and webseries with university funding and external production grants. Her senior thesis film, First Kiss was a finalist short at the 2012 Hollyshorts Film Festival. Her first film following graduation, The Perils of Growing Up Flat-Chested was the first place winner of the Ellen Kander Weiss production grant from the Steeltown Film Factory screenwriting competition, and is currently starting its festival circuit at the Palm Springs International ShortFest.</p>
+                 <p>
+                <img src='img/dan.png'>
+                    <span class="name"><b>Dan Vetanovetz</b></span>
+                    <span class="title">Producer</span>
+                    Dan has worked in the worlds of both film and local politics since graduating from the University of Pittsburgh in 2008. He has worked primarily as Gaffer on projects such as Yulin Kuang's The Perils of Growing Up Flat Chested, Andrew Batista's The Commute and Andy Keleman's Letter Die: A Gamut Sibling Mystery. He has worked extensively in the Pittsburgh freelance set electrician scene for clients such as New Perspective and KDKA. Most recently, he managed Dan Gilman's winning primary campaign for city council. His experience listening to life stories of community members on the campaign trail has made him a strong believer in the inheritance of working America, and its rich history in Pittsburgh. He hopes to bring together the working attitude of crew members and the dedication of campaign workers on this project.</p>
+            </div>
+        </div>
+        <div id="director_statement" class="noshow">
+            <h2>Director&#39;s Statement</h2>
+            <div class="inner" style="text-align: justify;">
+                <p><b>The Homestead Strike happened 120 years ago. Why tell the story now?</b></p>
+                <p>This story of charismatic leaders and ruthless capitalism holds a certain relevance to key issues of wealth and organized labor that our nation faces today. This work will address issues of workers&#39; welfare, labor rights, and economic equality that hold a special importance in the wake of the recent Occupy Movement and the empowering of the &#34;Ninety-Nine Percent&#34;. One-hundred and twenty years after the Homestead Strike, the context of organized labor debates has changed, but the underlying message of workers&#39; rights remains the same.</p>
+                <p>The inspiration for this film stems from an appreciation for the strength of character of individuals on both sides of the conflict, including the rags-to-riches robber barons of the Gilded Age, like Andrew Carnegie and Henry Clay Frick, and the blue-collar champions of the workers, like strike leader Hugh O&#39;Donnell. I wish to remind audiences of the heroism embedded in the nameless Pittsburgh steelworkers whose backbreaking work shaped our country westward and skyward. This work will aim to shed light on both sides of the conflict. By presenting the story as a dramatic film with high production quality, I aim to prompt an important dialogue on the relationship between capital and labor in the context of past tragedies and triumphs.</p>
+                <p><b>Why a short film?</b></p>
+                <p class="last">Film is the most effective medium to tell the story of the Homestead Strike to a generation of younger students and Pittsburgh residents. Producing the film as a dramatic narrative rather than a documentary will allow us to convey the energy and passion of the time period and connect with our audience on an emotional level.</p>
+            </div>
+        </div>
+        <div id="donate" class="noshow">
+            <h2>Donate</h2>
+            <div class="donate">
+                <p><img src="img/kickstarter-logo-dark.png"></p>
+                <p style="font-size: 24px">
+                    Coming August 2013!
+                </p>
+            </div>
+        </div>
+        <div id="synopsis" class="noshow">
+            <h2>Synopsis</h2>
+            <div>
+                <p style="text-align: justify;">Set in Homestead, PA in 1892, Hugh O&#39;Donnell struggles to maintain order among fellow steelworkers as wages are cut and working conditions decline under the ruthless management of Henry Clay Frick. Mounting tensions forebode a brutal workers&#39; strike, but O&#39;Donnell is determined to find a peaceful solution to this historic clash between capital and labor.</p>
+            </div>
+        </div>
+        <div id="trailer" class="noshow">
+            <h2>Trailer</h2>
+            <div style="text-align: center;">
+                <p style="font-size: 24px">Coming Soon!</p>
+            </div>
+        </div>
+         <div id="contact" class="noshow">
+                <h2>Contact</h2>
+                <div class="contact">
+                    <p><b>Email: steeltownmovie@gmail.com</b></p>
+                    <p>
+                        <span><a href="https://www.facebook.com/SteelTownMovie"><img src="img/facebook2.png">/SteelTownMovie</a></span>
+                        <span><a href="https://twitter.com/SteelTownMovie"><img src="img/twitter2.png">@SteelTownMovie</a></span>
+                    </p>
+                </div>
+            </div>
         <div id="nav">
             <a class="current" href="index.html">Home</a>|
-            <a href="trailer.html">Trailer</a>|
+            <a href="trailer">Trailer</a>|
             <a href="synopsis.html">Synopsis</a>|
             <a href="director_statement.html">Director's Statement</a>|
             <a href="artwork.html">Artwork</a>|
