--- a/producer.html
+++ b/producer.html
@@ -111,6 +111,24 @@
 			</div>
 			
 			<div id="content">
+			    <div class="description" data-fill="#554132">
+    			    <div>
+    			        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_2" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+                        <path d="M77.625,59.25"/>
+                        <path d="M23.438,67.193"/>
+                        <path d="M23.23,67.897L25,58c1.875-4.875-0.766-31.641-1.109-32.984c-0.343-1.343,0-1.349,0-1.349S52.768,20.256,78.1,24.59  c0,0,0.4,0.02,0.135,1.129c0,0-4.166,30.572-1.45,32.272c0,0-8.159,1.134-21.722,7.509c0,0-13.742,6.822-15.688,9.5  c0,0-1.769,1.594,0.5,0.25c23.351-13.831,37.751-15.625,37.751-15.625s11.875-0.312,11.75,6.938c0,0-0.75,7.562-19.625,5.062  c0,0-7.235-2.438-17.25,1.188C42.487,76.439,50,73.75,50,73.75c-20.375,8.75-42,5.5-38.875-5.375c0,0-0.421-5.916,12.935-10.354  l-2.018,9.501c0,0-0.069,3.562,1.396-0.329"/>
+                        </svg>
+              </div>
+    			    <h2>Steel Town</h2>
+    			    <p>Synopsis:</p>
+    			    <p>Set in Homestead, PA in 1892, Hugh O'Donnell struggles to maintain order among fellow steelworkers as wages are cut and working conditions decline under the ruthless management of Henry Clay Frick. Mounting tensions forebode a brutal workers' strike, but O'Donnell is determined to find a peaceful solution to this historic clash between capital and labor.</p>
+    			    <p><i>Steel Town</i> was shot in November 2013 and is scheduled to premiere in April 2014.</p>
+    			    <p>
+    			        Written by Nicolas Hurt and Yulin Kuang</br>
+                        Directed by Nicolas Hurt
+    			    </p>
+    			    <p>Film website: <a href="http://www.steeltownfilm.com">www.steeltownfilm.com</a></p>
+    			  </div>
 			  <div class="description" data-fill="#FC9EFF">
 			    <div>
 			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100.0px" height="100px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
