--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
 			
 			<div id="content" style="width: 800px">
 			  <div id="galleria">
-		    <img src="images/home/1.jpg" />
-		    <img src="images/home/2.jpg" />
-		    <img src="images/home/3.jpg" />
-		    <img src="images/home/4.jpg" />
+		    <img src="images/home/1b.jpg" />
+		    <img src="images/home/2b.jpg" />
+		    <img src="images/home/3b.jpg" />
+		    <img src="images/home/4b.jpg" />
 		    <img src="images/home/5.jpg" />
 		    <img src="images/home/6.jpg" />
 		    <img src="images/home/7.jpg" />
@@ -203,7 +203,7 @@
                 </svg>
       </div>
 		    <h2>Project Spotlight</h2>
-		    <img src="images/home/title_card.jpg" style="width: 400px; margin-left: 20px;">
+		    <a href="http://www.steeltownfilm.com"><img src="images/home/title_card.jpg" style="width: 400px; margin-left: 20px;"></a>
 		    <p>An 1890s period piece short which follows Pittsburgh steelworkers in their battle against the millionaires who hired them.</p>
 		    <p>Film website: <a href="http://www.steeltownfilm.com">www.steeltownfilm.com</a></p>
 		  </div>
