--- a/producer.html
+++ b/producer.html
@@ -7,7 +7,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Monoton|Open+Sans:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 		<script src="src/svg.js" data-path="src"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="javascripts/jquery.min.js"></script>
 		<script src="javascripts/application.js"></script>
 		<script type="text/javascript">
 
