updated email. edited producer and other

--- a/director.html
+++ b/director.html
@@ -160,7 +160,7 @@
 			  </div>
 			  <div id="footer">			    
   	      <div id="contact">
-  	        <a href="mailto:nhurt@cmu.edu" target="_blank">
+  	        <a href="mailto:nhurtfilms@gmail.com" target="_blank">
   	          <img src="images/Footer/GM.png" width="25" height="25"/>
     	      </a>
     	      <a href="http://vimeo.com/nicolashurt" target="_blank">
