--- a/old/index.html
+++ b/old/index.html
@@ -39,7 +39,7 @@
 				<img class="about_me" src="images/nick.jpg">
 				<h2>About Me</h2>
 				<p class="about">I am currently a Junior in the <a target="_blank" href="http://tepper.cmu.edu/">Tepper School of Business</a> at <a target="_blank" href="http://www.cmu.edu">Carnegie Mellon University</a>, where I am pursuing a customized track in “Film Production Management” and minoring in Film and Media Studies. Before college, I was part of three student film crews which shot on-location in Utah, North Dakota, and Ireland, and I have interned for two summers at <a target="_blank" href="http://www.illuminationentertainment.com/">Illumination Entertainment</a> in Santa Monica, California. In addition to being a coordinator of fundraising and marketing for the <a target="_blank" href="http://www.cmu.edu/faces/">Faces of Others International Film Festival</a>, I am heavily involved in the <a target="_blank" href="http://www.cmufilmclub.com/">CMU filmmaking club</a>, for which I have produced multiple short films. My life goal is to be a Hollywood film director whose name is recognized by people in Wyoming.</p>
-				<p><a class="email" href="mailto:nhurt@cmu.edu">nhurt@cmu.edu</a></p>
+				<p><a class="email" href="mailto:nhurtfilms@gmail.com">nhurtfilms@gmail.com</a></p>
 			</div>
 			
 		</div>
