--- a/other.html
+++ b/other.html
@@ -111,6 +111,15 @@
 			</div>
 			
 			<div id="content">
+	     			  <div class="description" data-fill="#000">
+	     			    <div>
+	  					<img src="images/dreamworks.png"/>
+	  				</div>
+	     			    <h2>International Dubbing and Brand Management Temp, DreamWorks Animation</h2>
+	     			    <p>Working on the newly formed international dubbing team at DreamWorks Animation, I take on a host of responsibilities which include coordinating the competitive bidding process for foreign dubbing studios across the world, maintaining cost tracking reports, overseeing the invoicing and payments process for all vendors, and overseeing the creative voice testing and voice actor approvals process for theatrical and Netflix TV releases.
+	     				</p>
+	     			  </div>
+	  			
    			  <div class="description" data-fill="#000">
    			    <div>
 					<img src="images/Legendary_Pictures_logo.gif"/>
@@ -215,7 +224,7 @@
 			
 			<div id="footer">			    
   	      <div id="contact">
-  	        <a href="mailto:nhurt@cmu.edu" target="_blank">
+  	        <a href="mailto:nhurtfilms@gmail.com" target="_blank">
   	          <img src="images/Footer/GM.png" width="25" height="25"/>
     	      </a>
     	      <a href="http://vimeo.com/nicolashurt" target="_blank">
