--- a/producer.html
+++ b/producer.html
@@ -159,6 +159,40 @@
   			  <iframe src="http://player.vimeo.com/video/40345179" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
   			 
 			  </div>
+			  <div class="description" data-fill="#000">
+			    <div>
+			      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"  width="88.108px" height="100px" viewBox="-346 256 100 100" enable-background="new -346 256 100 100" xml:space="preserve">
+            <circle cx="-279.772" cy="264.368" r="8.14"/>
+            <path d="M-270.712,274.206l-18.248-0.007c-1.737,0-3.274,0.434-4.58,1.189c2.446,2.423,3.704,5.982,3.704,9.522v24.845  c0,0.141-0.032,0.249-0.038,0.384l-0.007,41.299c0,2.518,2.044,4.562,4.562,4.562c2.524,0,4.565-2.044,4.565-4.562l0.007-38.288  h2.031l-0.014,38.288c0,2.518,2.045,4.562,4.566,4.562c2.518,0,4.562-2.044,4.562-4.562l0.02-66.009h2.002v24.326  c0,4.892,6.383,4.892,6.37,0v-24.845C-261.21,279.503-264.389,274.206-270.712,274.206z"/>
+            <path d="M-330.665,284.763c0-2.201,0.445-4.212,1.245-5.949h-1.405c-2.518,0-4.562,2.041-4.562,4.562  c0,2.521,2.044,4.566,4.562,4.566h0.16V284.763z"/>
+            <circle cx="-310.251" cy="264.368" r="8.14"/>
+            <path d="M-320.36,351.438c0,2.518,2.044,4.562,4.564,4.562c2.522,0,4.565-2.044,4.565-4.562l0.005-38.288h2.031l-0.013,38.288  c0,2.518,2.044,4.562,4.565,4.562c2.519,0,4.562-2.044,4.562-4.562l0.02-66.009h2.003v24.326c0,4.892,6.382,4.892,6.369,0v-24.845  c0-5.407-3.179-10.705-9.503-10.705l-18.247-0.007c-5.763,0-9.375,4.7-9.375,10.564v24.993c0,4.857,6.419,4.857,6.419,0V285.43  h2.044L-320.36,351.438z"/>
+            </svg>
+          </div>
+			    <h2>Friendzone</h2>
+			    <p>A literal take on the oh-so-familiar place in a relationship that is inescapable yet unavoidable. Welcome to the Friendzone. </p>
+  			  <p>Written and Directed by Yulin Kuang</p>
+			  </div>
+			  <div class="description" data-fill="#87BFFF">
+			    <div>
+			      <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            	 width="90px" height="100px" viewBox="0 0 88.108 100" enable-background="new 0 0 88.108 100" xml:space="preserve">
+            <path id="path5156" d="M36.786,50.287l3.955,5.841h7.365l3.398-5.841l-3.58-6.22h-7.379L36.786,50.287z M39.819,97.261V84.054
+            	l-7.379,4.15l-3.759-2.152v-4.653l10.943-6.22v-8.68l-7.939,5.102v-9.196l-7.589,4.374v12.468l-4.151,2.572l-3.508-2.321v-8.356
+            	L4.919,77.64L0,75.57V70.3l12.089-6.609L4.528,59.89v-4.822l4.291-2.349l10.845,6.386l7.533-4.346l-0.182-0.139l-7.701-4.417
+            	l7.477-4.64l-7.505-4.346L8.442,47.589l-4.068-2.026v-4.808l7.339-4.123L0,30.272v-5.269l4.5-2.319l11.544,6.666v-8.497l3.48-2.348
+            	l4.264,2.46L23.76,33.683l7.756,4.43l-0.027-8.986l8.134,4.375v-8.68L28.68,18.589v-4.612l3.759-2.18l7.379,4.151V2.768L44.04,0
+            	l4.261,2.768v13.18l7.646-4.235l3.845,2.544v4.151L48.47,24.822v8.68l7.744-4.724v9.448l7.979-4.348V20.28l3.844-1.789l4.038,1.789
+            	v8.694l11.879-6.416l4.153,2.53v4.919l-11.601,6.597l7.254,4.066v4.697L80,47.45l-11.138-6.583l-7.702,4.892l7.449,4.642
+            	l-7.673,4.416l7.926,4.15L80,52.746l3.578,2.53v4.487L76.59,63.69L87.716,70.3v5.188l-4.71,2.152l-10.931-6.221v8.232l-3.927,2.194
+            	l-3.843-2.194V67.155l-8.092-4.611v8.68l-7.744-4.725v8.68l10.944,6.22v4.92l-3.776,1.886l-7.337-4.15v13.207L44.04,100
+            	L39.819,97.261z"/>
+            </svg>
+          </div>
+			    <h2>Take Twelve: A Christmas Movie</h2>
+			    <p>A group of passionate, yet misguided college kids teams up to shoot a Christmas commercial. Accordingly, this is a collaboration between a similar group of Carnegie Mellon students.</p>
+  			  <p>Written by Benjamin Welmond, Yulin Kuang, and Stefan Dezil. Directed by Benjamin Welmond and Yulin Kuang</p>  
+			  </div>
 			  <div id="footer">			    
   	      <div id="contact">
   	        <a href="mailto:nhurtfilms@gmail.com" target="_blank">
