--- a/director.html
+++ b/director.html
@@ -140,7 +140,7 @@
 			    <h2>Three Mimes</h2>
 			    <p>The film which marks my directorial debut. <i>Three Mimes</i> is a dialogue-free short film inspired by Pixar shorts.</p>
   			  <p>Written and Directed by Nicolas Hurt</p>
-  			  <iframe src="http://player.vimeo.com/video/47900699" width="576" height="384" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  			  <p><img src="images/mime.jpg" style="width: 576px; height: inherit"  /></p>
 			  </div>
 			  <div class="description" data-fill="#3E6516">
 			    <div>
@@ -156,7 +156,7 @@
 			    <h2>Bonsai</h2>
 			    <p>Continuing the theme of dialogue-free shorts inspired by Pixar, <i>Bonsai</i> tells the story of father and son. It was filmed on super 8mm film, which gives it that "yesteryear" aesthetic and poses a handful of new challenges for me as a filmmaker.</p>
   			  <p>Written and Directed by Nicolas Hurt</p>
-  			  <iframe src="http://player.vimeo.com/video/41047005" width="576" height="384"frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  			  <p><img src="images/bonsai.jpg" style="width: 576px; height: inherit"  /></p>
 			  </div>
 			  <div id="footer">			    
   	      <div id="contact">
